--- a/styles.css
+++ b/styles.css
@@ -5,12 +5,12 @@ body {
 #container {
     display: flex;
     flex-wrap: wrap;
-    border: 2px solid black;
     width: 800px;
     height: 800px;
 }
 
 .box {
     border: 1px solid black;
+    background-color: white;
     box-sizing: border-box
 }
